--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="model"
@@ -9,7 +10,8 @@
 <androidx.cardview.widget.CardView
     android:layout_margin="4dp"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent" >
+    android:layout_width="match_parent"
+    app:cardBackgroundColor="@{context.getResources().getColor(model.color)}">
 
     <LinearLayout
         android:layout_height="wrap_content"
@@ -20,7 +22,7 @@
         android:id="@+id/tv_title"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@{model.title}"
+        android:text="@{model._title}"
         tools:text="Very important note"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -31,7 +33,7 @@
         android:layout_margin="8dp"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:text="@{model.text}"
+        android:text="@{model._text}"
         tools:text="My very important note text with very important information" />
 
 </LinearLayout>
