--- a/app/src/main/res/menu/note.xml
+++ b/app/src/main/res/menu/note.xml
@@ -10,4 +10,11 @@
         android:showAsAction="ifRoom"
         tools:ignore="AppCompatResource"/>
 
+    <item android:id="@+id/delete"
+        android:title="Delete"
+        android:iconTint="@color/white"
+        android:icon="@drawable/ic_baseline_delete_24"
+        app:showAsAction="always"
+        android:showAsAction="always"
+        tools:ignore="AppCompatResource" />
 </menu>
